# filecast

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
.github/workflows/: release.yml  tests.yml
docs/: COMPARISON.md  PROTOCOL.md  demo.tape
src/: Config.cpp  Config.hpp  Main.cpp  Progress.hpp  Protocol.hpp  Receiver.cpp  Sender.cpp  Sha256.hpp  Utils.hpp
tests/: Tests.cpp  corrupt_proxy.py  dropproxy.py  e2e.sh  e2e_corrupt.sh  e2e_diskfull.sh  e2e_flood.sh  e2e_hijack.sh  e2e_lossy.sh  e2e_prelatch.sh  e2e_sendfail.sh  e2e_syncfail.sh  failpwrite.c  failsendto.c  failsync.c  flood.py  hijack_proxy.py
